test/compile-fail/call-missing.as
def method(x: int, y: int) -> int {
  return x * y;
}

method(10);  // error
