test/compile-fail/call-missing.stderr
[0;37mtest/compile-fail/call-missing.as:5.1-11: [0;31merror: [1;37mexpected 2 arguments but received 1[0m
